--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ code {
 }
 
 #playerart {
+  position: relative;
   background-color: rgb(179, 179, 179);
   width: 150px;
   height: 150px;
@@ -110,4 +111,43 @@ code {
 
 #timeslider {
   width: 100%;
+}
+
+#spinner {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#spinner div {
+  position: absolute;
+  border: 5px solid white;
+  opacity: 0;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  animation-direction:reverse;
+}
+/* animation reversed to fix a visual glitch on safari */
+#spinner div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+  100% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
 }
