--- a/src/index.css
+++ b/src/index.css
@@ -29,12 +29,35 @@ code {
   list-style-type: none;
   cursor: default;
   padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 #showpicker li:hover {
   background-color: lightgoldenrodyellow;
   color: black;
 }
+
+#showpicker li > .deletebutton {
+  visibility: hidden;
+  font-size: 12px;
+  border: 1px dotted black;
+  padding: 2px;
+}
+
+#showpicker li:hover > .deletebutton:hover {
+  background-color: black;
+  color: lightgoldenrodyellow;
+}
+
+#showpicker li:hover > .deletebutton {
+  visibility: visible;
+}
+
 
 #player {
   background-color: darkgrey;
