--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ code {
 #showpicker li {
   list-style-type: none;
   cursor: default;
+  padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 10px;
   padding-right: 10px;
@@ -42,7 +43,12 @@ code {
   color: black;
 }
 
-#showpicker li > .deletebutton {
+#showpicker li .title {
+  font-size: 20px;
+  text-align: left;
+}
+
+#showpicker li .deletebutton {
   visibility: hidden;
   font-size: 12px;
   border: 1px dotted black;
@@ -202,6 +208,8 @@ code {
   gap: 5px;
   justify-content: center;
   user-select: none;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #addshows > div {
